workloads/hw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw
  template:
    metadata:
      labels:
        app: hw
    spec:
      containers:
      - name: hw
        image: asayah/hw:v1
        imagePullPolicy: Always
