workloads/hw/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw
  labels:
    app: hw
    service: hw
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: hw
