workloads/hw/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
         - prefix: /
        delegateAction:
          ref:
            name: hw
            namespace: default
